--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=devide-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" conent="ie=edge" />
-    <link rel="stylesheet" href="/path/to/your/main.css" />
+    <link rel="stylesheet" href="App.css" />
 
     <title></title>
   </head>
